Create Dockerfile with runtime build architecture
Implement single-stage Dockerfile based on nginx:alpine that installs
MkDocs dependencies at build time and builds documentation at runtime.
This architecture eliminates the need to rebuild the Docker image when
documentation changes.

Key features:
- Base: nginx:alpine for minimal footprint
- Installs Python, pip, and MkDocs plugins from requirements.txt
- Copies nginx.conf configuration
- Creates entrypoint script that:
  - Expects docs to be volume-mounted at /docs
  - Runs mkdocs build at container startup
  - Outputs to /usr/share/nginx/html
  - Starts nginx in foreground
- Exposes port 80 (mapped to 8080 on host via docker-compose)

Add comprehensive test suite that verifies:
- Dockerfile structure and dependencies
- Python and MkDocs installation
- nginx configuration
- Entrypoint script presence
- Port exposure
- Docker build success

Fix requirements.txt package names:
- Remove mkdocs-privacy-plugin (built into mkdocs-material)
- Fix markdown-tables-extended package name (was mkdocs-markdown-tables-extended)
- Update test mappings to reflect actual package names

Update test to handle:
- Case-insensitive string matching
- Both pip and pip3 commands
- PEP 668 compliance with --break-system-packages flag

Update issue #3 to reflect runtime build approach based on
architectural review.

Closes #3

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,31 @@
-# Multi-stage Dockerfile for MkDocs documentation serving
-# Stage 1: Build documentation with MkDocs
-# Stage 2: Serve with nginx
+# Dockerfile for serving MkDocs documentation with nginx
+# Architecture: Install dependencies at build time, build docs at runtime
+# The dyalog-docs directory is volume-mounted at runtime for flexibility
 
-# Placeholder - to be implemented in subsequent tasks
+FROM nginx:alpine
+
+# Install Python and pip
+RUN apk add --no-cache python3 py3-pip
+
+# Copy and install Python requirements
+COPY docker/requirements.txt /tmp/requirements.txt
+RUN pip3 install --break-system-packages --no-cache-dir -r /tmp/requirements.txt && rm /tmp/requirements.txt
+
+# Copy nginx configuration
+COPY docker/nginx.conf /etc/nginx/nginx.conf
+
+# Create entrypoint script that builds docs and starts nginx
+RUN echo '#!/bin/sh' > /entrypoint.sh && \
+    echo 'set -e' >> /entrypoint.sh && \
+    echo 'if [ -d "/docs" ]; then' >> /entrypoint.sh && \
+    echo '  cd /docs' >> /entrypoint.sh && \
+    echo '  mkdocs build --site-dir /usr/share/nginx/html' >> /entrypoint.sh && \
+    echo 'else' >> /entrypoint.sh && \
+    echo '  echo "Warning: /docs directory not found, nginx will serve empty content"' >> /entrypoint.sh && \
+    echo 'fi' >> /entrypoint.sh && \
+    echo 'exec nginx -g "daemon off;"' >> /entrypoint.sh && \
+    chmod +x /entrypoint.sh
+
+EXPOSE 80
+
+ENTRYPOINT ["/entrypoint.sh"]
