Fix CI: use consistent image name across environments
The issue was that docker compose generates image names based on the
project directory name, which differs between local (claudews) and CI
(link_checker) environments.

Fix:
- Add explicit 'image: dyalog-docs-server' to docker-compose.yml
- Update tests to use 'dyalog-docs-server' instead of 'claudews-docs-server'

This ensures the image name is consistent across all environments,
fixing the CI test failures where tests couldn't find the image.

Verified:
- All 45 tests pass locally
- Image name is now dyalog-docs-server everywhere
- docker compose build creates image with predictable name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile
+    image: dyalog-docs-server
     container_name: dyalog-docs-server
     ports:
       - "8080:80"
