--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "beautifulsoup4>=4.14.2",
-]
+dependencies = []
 
 [dependency-groups]
 dev = [
+    "beautifulsoup4>=4.14.2",
     "black>=25.11.0",
     "pytest>=9.0.0",
     "pytest-cov>=7.0.0",
