--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = []
 
 [dependency-groups]
 dev = [
+    "beautifulsoup4>=4.14.2",
     "black>=25.11.0",
     "pytest>=9.0.0",
     "pytest-cov>=7.0.0",
