Add DOCS_DIR environment variable for documentation switching
Replaces manual docker-compose.yml editing with environment variable:
- DOCS_DIR defaults to test-docs for fast development
- Set DOCS_DIR=dyalog-docs for full documentation
- Usage: DOCS_DIR=dyalog-docs docker compose up -d

Benefits:
- No file editing required
- Easy switching between documentation sources
- Clear command-line interface
- Preserves docker-compose.yml in version control

Updates README.md with new usage instructions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - "8080:80"
     volumes:
-      # Mount test-docs by default for fast development
-      # To use full docs: change to ./dyalog-docs:/docs
-      - ./test-docs:/docs
+      # Mount docs directory based on DOCS_DIR environment variable
+      # Default: test-docs (fast development)
+      # For full docs: DOCS_DIR=dyalog-docs docker compose up -d
+      - ./${DOCS_DIR:-test-docs}:/docs
     restart: unless-stopped
